--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "sharp": "^0.31.3",
+    "svgo": "^3.0.2",
     "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vite-plugin-compression2": "^0.8.2",
+    "vite-plugin-image-optimizer": "^1.1.2",
+    "vite-plugin-optimize-css-modules": "^1.0.4"
   }
 }
