--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.21.4",
+    "@chakra-ui/react": "^2.7.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@toolz/is-a-regular-object-react": "^1.0.1",
     "@types/jquery": "^3.5.16",
     "@types/popper.js": "^1.11.0",
     "bootstrap": "^5.2.3",
     "firebase": "^9.19.1",
+    "framer-motion": "^10.12.16",
     "jest-mock": "^29.5.0",
     "jest-transform-css": "^6.0.1",
     "react": "^18.2.0",
