--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@toolz/is-a-regular-object-react": "^1.0.1",
     "@types/jquery": "^3.5.16",
     "@types/popper.js": "^1.11.0",
+    "@webcontainer/api": "^1.1.5",
     "bootstrap": "^5.2.3",
+    "express": "^4.18.2",
     "firebase": "^9.19.1",
     "framer-motion": "^10.12.16",
     "jest-mock": "^29.5.0",
@@ -27,15 +29,20 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0"
+    "react-live": "^4.1.3",
+    "react-router-dom": "^6.10.0",
+    "react-youtube": "^10.1.0",
+    "webcontainer": "^0.0.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.21.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/express": "^4.17.17",
     "@types/firebase": "^3.2.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/nodemon": "^1.19.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-test-renderer": "^18.0.0",
