--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react"
   },
   "include": ["src", "src/test", "files.js"],
+  "exclude": ["node_modules", "coverage", ".github"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
