--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jquery": "^3.5.16",
     "@types/popper.js": "^1.11.0",
     "@webcontainer/api": "^1.1.5",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "firebase": "^9.19.1",
@@ -30,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-live": "^4.1.3",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.10.0",
     "react-youtube": "^10.1.0",
     "webcontainer": "^0.0.1"
