--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,12 +16,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
-<<<<<<< HEAD
-    "outDir": "./dist"
-=======
+    "outDir": "./dist",
     "types": ["node", "jest"],
     "typeRoots": ["node_modules/@types", "src/@types"]
->>>>>>> abc1f46be415565b3b1f4eca5851dc1df07432a6
   },
   "include": ["src/**/*", "src/test", "files.js"],
   "exclude": ["node_modules", "coverage", ".github", ".firebase"],
