--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "target": "es5",
+    "outDir": "dist",
+    "rootDir": "src",
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
