--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --open --host",
+    "dev": "vite --open",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "jest --color --coverage --watchAll=false"
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@react-pdf/renderer": "^3.1.12",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -23,6 +24,7 @@
     "@webcontainer/api": "^1.1.5",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "firebase": "^9.19.1",
     "framer-motion": "^10.15.0",
